Fix avatar distortions

--- a/src/app/shared/component/profile-image/profile-image.component.scss
+++ b/src/app/shared/component/profile-image/profile-image.component.scss
@@ -1,23 +1,28 @@
-.profile-image {
-	display: flex;
+.avatar {
 	overflow: hidden;
-
-	justify-content: center;
-
-	width: 48px;
-	height: 48px;
 
 	border-radius: 50%;
 
-	&_size {
-		&_s {
-			width: 40px;
-			height: 40px;
-		}
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
 
-		&_l {
-			width: 180px;
-			height: 180px;
-		}
+.size {
+	&_s {
+		width: 40px;
+		height: 40px;
+	}
+
+	&_m {
+		width: 48px;
+		height: 48px;
+	}
+
+	&_l {
+		width: 180px;
+		height: 180px;
 	}
 }
